--- a/src/components/ParallaxContainer/StaticParallaxContainer.css
+++ b/src/components/ParallaxContainer/StaticParallaxContainer.css
@@ -1,10 +1,3 @@
-/*.scrollable{
-  background-color: transparent;
-  overflow-y: scroll;
-  min-height: 100vh;
-  width: 90%;
-}*/
-
 .static-background {
   overflow: hidden;
   will-change: transform;
@@ -66,7 +59,7 @@
   z-index: 1;
 }
 
-.content-wrapper {
+.static-content-wrapper {
   align-items: center;
   height: 100vh;
   display: flex;
@@ -79,7 +72,7 @@
   backface-visibility: hidden;
   transition: all 1.7s cubic-bezier(0.22, 0.44, 0, 1);
 }
-.content-wrapper-override{
+.static-content-wrapper-override{
   transform: translateY(0vh) !important;
   /*height: unset; remove the 100vh setting */
 }
